# Madokami-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-test.yml
madokami/: __init__.py  app.py  config.py  crud.py  db.py  log.py  models.py  util.py
madokami/api/: __init__.py  app.py  downloads.py  engines.py  logs.py  media.py  models.py  plugins.py  register.py  scheduler.py  settings.py  subscribe.py
madokami/drivers/: __init__.py  app.py  deps.py  hooks.py  madokami.py  router.py
madokami/internal/: core_config.py  downloader.py  models.py  scheduler.py  settings.py  utils.py
madokami/internal/default_plugins/: bangumi_requester.py  default_downloader.py  default_requester.py
madokami/plugin/: __init__.py  basic_plugin.py  engine_register.py  hooks.py  manager.py  models.py  settings_register.py  subscription.py  subscription_regiser.py
madokami/plugin/backend/: downloader.py  engine.py  models.py  parser.py  requester.py
tests/: conftest.py  test_aria2_downloader.py  test_config.py  test_db.py  test_launcher.py
tests/plugin/: test_downloader.py  test_manager.py  test_requester.py  test_scheduler.py
tests/plugin/test_plugin/: __init__.py
