[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Hongpei Zheng <zhenghongpei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
loguru = "^0.7.2"
pydantic = "^2.7.0"
sqlalchemy = "^2.0.29"
pyyaml = "^6.0.1"
sqlmodel = "^0.0.16"
pytest = "^8.1.1"
requests = "^2.31.0"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
